--- a/style.css
+++ b/style.css
@@ -75,3 +75,10 @@ body{
 .films p{
     font-family: 'Ubuntu', sans-serif;
 }
+@media (min-width: 480px){
+
+    .col{
+        width: 25%;
+    }
+
+}
