--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body{
     padding: 25px 50px;
 
 }
+
+
 #one{
     display: inline;
     background-color: #ffffff;
@@ -75,13 +77,18 @@ body{
 .films p{
     font-family: 'Ubuntu', sans-serif;
 }
+
 @media (max-width: 768px) {
 
 
+
         .col{
-            width: 25%;
+            width: 20%;
+            
+            
+
         }
-     .films p{
+        .films p{
             font-size: 13px;
             
         }
@@ -90,10 +97,27 @@ body{
             padding: 5px;
             margin-bottom: 4px;
         }
-    .col img{
+        .col img{
             width: 70px;
         }
     
-    
-}
+    .sort-by{
+        width: 100px;
+    }
+    .sort-by h3{
+        font-size: 13px;
 
+    }
+    .sort-by h4{
+        font-size: 10px;
+    }
+    .bi{
+        padding-left: 5px;
+    }
+    .hr1{
+        display: none;
+    }
+    .films{
+        margin-left: 130px;
+    }
+}
