--- a/style.css
+++ b/style.css
@@ -67,6 +67,27 @@ body{
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 15px;
 }
+.things{
+    margin-left: 250px;
+}
+.thing{
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 10px;
+    border: 1px solid green;
+    border-left: 10px solid green;
+    border-radius: 0px 0px 40px 0px;
+    padding: 8px;
+}
+.thin{
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 10px;
+    border: 1px solid green;
+    border-left: 10px solid green;
+    border-radius: 0px 0px 40px 0px;
+    padding: 8px;
+}
 .col{
     text-align: center;
     float: left;
